--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -15,6 +15,7 @@
 #include "pm8916.dtsi"
 #include "apq8016-sbc-soc-pins.dtsi"
 #include "apq8016-sbc-pmic-pins.dtsi"
+#include "msm8916-mdss.dtsi"
 
 / {
 	aliases {
@@ -59,6 +60,28 @@
 		/* On High speed expansion */
 			label = "HS-I2C2";
 			status = "okay";
+
+			bridge@39 {
+				status = "okay";
+				compatible = "adi,adv7533";
+				reg = <0x39>;
+				interrupt-parent = <&msmgpio>;
+				interrupts = <31 2>;
+				avdd-supply = <&pm8916_l6>;
+				v3p3-supply = <&pm8916_l17>;
+				adi,dsi-lanes = <4>;
+				pd-gpios = <&msmgpio 32 0>;
+				pinctrl-names = "default","sleep";
+				pinctrl-0 = <&adv7533_int_active &adv7533_switch_active>;
+				pinctrl-1 = <&adv7533_int_suspend &adv7533_switch_suspend>;
+
+				port {
+					adv_in: endpoint {
+						remote-endpoint = <&dsi_out>;
+					};
+				};
+
+			};
 		};
 
 		i2c@78ba000 {
@@ -163,6 +186,26 @@
 
 		lpass@07708000 {
 			status = "okay";
+		};
+
+		dsi@1a98000 {
+			status = "okay";
+
+			vdda-supply = <&pm8916_l2>;
+			vddio-supply = <&pm8916_l6>;
+
+			port {
+				dsi_out: endpoint {
+					remote-endpoint = <&adv_in>;
+					qcom,data-lane-map = <0 1 2 3>;
+				};
+			};
+		};
+
+		dsi-phy@1a98300 {
+			status = "okay";
+
+			vddio-supply = <&pm8916_l6>;
 		};
 	};
 
