dts: 8996: Add iommus property for mdp node
Signed-off-by: Sricharan R <sricharan@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -500,7 +500,7 @@
 			interrupts = <0 83 0>;
 			interrupt-controller;
 			#interrupt-cells = <1>;
-			//iommus = <&mdp_smmu 0>;
+			iommus = <&mdp_smmu 0>;
 		};
 
 		mdss_hdmi_phy: qcom,hdmi_phy@9a0600 {
