--- a/drivers/gpu/drm/i2c/Kconfig
+++ b/drivers/gpu/drm/i2c/Kconfig
@@ -5,6 +5,7 @@ config DRM_I2C_ADV7511
 	tristate "AV7511 encoder"
 	select REGMAP_I2C
 	select DRM_MIPI_DSI
+	depends on SND_SOC
 	help
 	  Support for the Analog Device ADV7511(W) and ADV7513 HDMI encoders.
 
