--- a/arch/arm64/boot/dts/qcom/msm8916.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916.dtsi
@@ -18,6 +18,11 @@
 / {
 	model = "Qualcomm Technologies, Inc. MSM8916";
 	compatible = "qcom,msm8916";
+	qcom,msm-id = <247 0>,
+			<206 0>,
+			<248 0>,
+			<249 0>;
+
 
 	interrupt-parent = <&intc>;
 
