ARM: dts: apq8064: Add MDP support
This patch adds MDP node to APQ8064 dt.

Signed-off-by: Rob Clark <robdclark@gmail.com>
[Srinivas Kandagatla] : updated with new style rpm regulators
Signed-off-by: Srinivas Kandagatla <srinivas.kandagatla@linaro.org>
[Archit Taneja] : updated with new hdmi phy bindings

Signed-off-by: Archit Taneja <architt@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-apq8064-pins.dtsi
+++ b/arch/arm/boot/dts/qcom-apq8064-pins.dtsi
@@ -7,6 +7,21 @@
 		};
 	};
 
+	hdmi_pinctrl: hdmi-pinctrl {
+		mux1 {
+			pins = "gpio69", "gpio70", "gpio71";
+			function = "hdmi";
+			bias-pull-up;
+			drive-strength = <2>;
+		};
+		mux2 {
+			pins = "gpio72";
+			function = "hdmi";
+			bias-pull-down;
+			drive-strength = <16>;
+		};
+	};
+
 	ps_hold: ps_hold {
 		mux {
 			pins = "gpio78";
