iommu debug (bus_add_dev hang)

--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -488,7 +488,7 @@
 				 <&mmcc MMAGIC_MDSS_AXI_CLK>,
 				 <&rpmcc RPM_MMAXI_CLK>;
 			clock-names = "iface_clk",
-				      "mmagic_iface_clk"
+				      "mmagic_iface_clk",
 				      "bus_clk",
 				      "core_clk_src",
 				      "core_clk",
