--- a/drivers/gpu/drm/msm/Makefile
+++ b/drivers/gpu/drm/msm/Makefile
@@ -40,6 +40,7 @@ msm-y := \
 	mdp/mdp5/mdp5_plane.o \
 	mdp/mdp5/mdp5_smp.o \
 	mdp/mdp5/mdp5.o \
+	mdp/mdp5/mdss.o \
 	msm_atomic.o \
 	msm_drv.o \
 	msm_fb.o \
