--- a/arch/arm64/boot/dts/qcom/apq8096-dragonboard.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8096-dragonboard.dtsi
@@ -27,18 +27,22 @@
 			status = "okay";
 		};
 
-		qcom,hdmi_phy@9a0600 {
+		mdss@900000 {
 			status = "okay";
 
-			vddio-supply = <&pm8994_l12>;
-			vcca-supply = <&pm8994_l28>;
-		};
+			hdmi-phy@9a0600 {
+				status = "okay";
 
-		qcom,hdmi_tx@9a0000 {
-			status = "okay";
+				vddio-supply = <&pm8994_l12>;
+				vcca-supply = <&pm8994_l28>;
+			};
 
-			core-vdda-supply = <&pm8994_l12>;
-			core-vcc-supply = <&pm8994_s4>;
+			hdmi-tx@9a0000 {
+				status = "okay";
+
+				core-vdda-supply = <&pm8994_l12>;
+				core-vcc-supply = <&pm8994_s4>;
+			};
 		};
 
 		ufsphy@627000 {
