--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -355,102 +355,117 @@
 			status = "okay";
 		};
 
-		mdss_mdp: qcom,mdss_mdp@900000 {
-			compatible = "qcom,mdss_mdp";
-			reg = <0x00900000 0x90000>,
-			      <0x009b0000 0x1040>,
-			      <0x009b8000 0x1040>;
-			reg-names = "mdp_phys",
-				"vbif_phys",
-				"vbif_nrt_phys";
-			clocks = <&mmcc MDSS_AHB_CLK>,
-				 <&mmcc MMSS_MMAGIC_AHB_CLK>,
-				 <&mmcc MDSS_AXI_CLK>,
-				 <&mmcc MDP_CLK_SRC>,
-				 <&mmcc MDSS_MDP_CLK>,
-				 <&mmcc SMMU_MDP_AXI_CLK>,
-				 <&mmcc MDSS_VSYNC_CLK>,
-				 <&mmcc MMAGIC_MDSS_AXI_CLK>,
-				 <&rpmcc RPM_MMAXI_CLK>;
-			clock-names = "iface_clk",
-				"mmagic_iface_clk",
-				"bus_clk",
-				"core_clk_src",
-				"core_clk",
-				"iommu_clk",
-				"vsync_clk",
-				"mmagic_mdss_bus_clk",
-				"rpm_mmaxi_clk";
-
-			connectors = <&mdss_hdmi>;
-
-			power-domains = <&mmcc MDSS_GDSC>;
+		mdss: mdss@900000 {
+			compatible = "qcom,mdss";
+			reg = <0x900000 0x1000>,
+				<0x009b0000 0x1040>,
+				<0x009b8000 0x1040>;
+			reg-names = "mdss_phys",
+					"vbif_phys",
+					"vbif_nrt_phys";
 
 			interrupt-parent = <&intc>;
 			interrupts = <0 83 0>;
 			interrupt-controller;
 			#interrupt-cells = <1>;
-			iommus = <&mdp_smmu 0>;
-		};
 
-		mdss_hdmi_phy: qcom,hdmi_phy@9a0600 {
-			compatible = "qcom,hdmi-phy-8996";
-			reg = <0x9a0600 0x1c4>,
-			      <0x9a0a00 0x124>,
-			      <0x9a0c00 0x124>,
-			      <0x9a0e00 0x124>,
-			      <0x9a1000 0x124>,
-			      <0x9a1200 0x0c8>;
-			reg-names = "hdmi_pll",
-				    "hdmi_tx_l0",
-				    "hdmi_tx_l1",
-				    "hdmi_tx_l2",
-				    "hdmi_tx_l3",
-				    "hdmi_phy";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges;
 
 			power-domains = <&mmcc MDSS_GDSC>;
 
-			clocks = <&mmcc MDSS_AHB_CLK>,
-				 <&mmcc MMSS_MMAGIC_AHB_CLK>,
-				 <&gcc GCC_HDMI_CLKREF_CLK>;
-			clock-names = "iface_clk",
-				      "mmagic_iface_clk",
-				      "ref_clk";
-		};
+			mdp: mdp@901000 {
+				compatible = "qcom,mdp5";
+				reg = <0x00901000 0x90000>;
+				reg-names = "mdp_phys";
+				clocks = <&mmcc MDSS_AHB_CLK>,
+					 <&mmcc MMSS_MMAGIC_AHB_CLK>,
+					 <&mmcc MDSS_AXI_CLK>,
+					 <&mmcc MDP_CLK_SRC>,
+					 <&mmcc MDSS_MDP_CLK>,
+					 <&mmcc SMMU_MDP_AXI_CLK>,
+					 <&mmcc MDSS_VSYNC_CLK>,
+					 <&mmcc MMAGIC_MDSS_AXI_CLK>,
+					 <&rpmcc RPM_MMAXI_CLK>;
+				clock-names = "iface_clk",
+					"mmagic_iface_clk",
+					"bus_clk",
+					"core_clk_src",
+					"core_clk",
+					"iommu_clk",
+					"vsync_clk",
+					"mmagic_mdss_bus_clk",
+					"rpm_mmaxi_clk";
 
-		mdss_hdmi: qcom,hdmi_tx@9a0000 {
-			compatible = "qcom,hdmi-tx-8996";
-			reg =	<0x009a0000 0x50c>,
-				<0x00070000 0x6158>,
-				<0x009e0000 0xfff>;
-			reg-names = "core_physical",
-				"qfprom_physical",
-				"hdcp_physical";
-			clocks = <&mmcc MDSS_MDP_CLK>,
-				 <&mmcc MDSS_AHB_CLK>,
-				 <&mmcc MDSS_HDMI_CLK>,
-				 <&mmcc MDSS_HDMI_AHB_CLK>,
-				 <&mmcc MDSS_EXTPCLK_CLK>;
-			clock-names =
-				"mdp_core_clk",
-				"iface_clk",
-				"core_clk",
-				"alt_iface_clk",
-				"extp_clk";
-			interrupt-parent = <&mdss_mdp>;
-			interrupts = <8 0>;
+				power-domains = <&mmcc MDSS_GDSC>;
 
-			power-domains = <&mmcc MDSS_GDSC>;
+				interrupt-parent = <&mdss>;
+				interrupts = <0 0>;
 
-			pinctrl-names = "default", "sleep";
-			pinctrl-0 = <&mdss_hdmi_hpd_active
-				     &mdss_hdmi_ddc_active>;
-			pinctrl-1 = <&mdss_hdmi_hpd_suspend
-				     &mdss_hdmi_ddc_suspend>;
+				iommus = <&mdp_smmu 0>;
 
-			phys = <&mdss_hdmi_phy>;
-			phy-names = "hdmi_phy";
-			status = "ok";
+				status = "okay";
+			};
+
+			hdmi_phy: hdmi-phy@9a0600 {
+				compatible = "qcom,hdmi-phy-8996";
+				reg = <0x9a0600 0x1c4>,
+				      <0x9a0a00 0x124>,
+				      <0x9a0c00 0x124>,
+				      <0x9a0e00 0x124>,
+				      <0x9a1000 0x124>,
+				      <0x9a1200 0x0c8>;
+				reg-names = "hdmi_pll",
+					    "hdmi_tx_l0",
+					    "hdmi_tx_l1",
+					    "hdmi_tx_l2",
+					    "hdmi_tx_l3",
+					    "hdmi_phy";
+
+				power-domains = <&mmcc MDSS_GDSC>;
+
+				clocks = <&mmcc MDSS_AHB_CLK>,
+					 <&mmcc MMSS_MMAGIC_AHB_CLK>,
+					 <&gcc GCC_HDMI_CLKREF_CLK>;
+				clock-names = "iface_clk",
+					      "mmagic_iface_clk",
+					      "ref_clk";
+			};
+
+			hdmi: hdmi-tx@9a0000 {
+				compatible = "qcom,hdmi-tx-8996";
+				reg =	<0x009a0000 0x50c>,
+					<0x00070000 0x6158>,
+					<0x009e0000 0xfff>;
+				reg-names = "core_physical",
+					"qfprom_physical",
+					"hdcp_physical";
+				clocks = <&mmcc MDSS_MDP_CLK>,
+					 <&mmcc MDSS_AHB_CLK>,
+					 <&mmcc MDSS_HDMI_CLK>,
+					 <&mmcc MDSS_HDMI_AHB_CLK>,
+					 <&mmcc MDSS_EXTPCLK_CLK>;
+				clock-names =
+					"mdp_core_clk",
+					"iface_clk",
+					"core_clk",
+					"alt_iface_clk",
+					"extp_clk";
+
+				interrupt-parent = <&mdss>;
+				interrupts = <8 0>;
+
+				pinctrl-names = "default", "sleep";
+				pinctrl-0 = <&mdss_hdmi_hpd_active
+					     &mdss_hdmi_ddc_active>;
+				pinctrl-1 = <&mdss_hdmi_hpd_suspend
+					     &mdss_hdmi_ddc_suspend>;
+
+				phys = <&hdmi_phy>;
+				phy-names = "hdmi_phy";
+				status = "ok";
+			};
 		};
 
 		ufsphy1: ufsphy@627000 {
