--- a/arch/arm64/boot/dts/qcom/apq8096-dragonboard.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8096-dragonboard.dtsi
@@ -30,18 +30,22 @@
 		mdss@900000 {
 			status = "okay";
 
+			mdp@901000 {
+				status = "okay";
+			};
+
 			hdmi-phy@9a0600 {
 				status = "okay";
 
-				vddio-supply = <&pm8994_l12>;
-				vcca-supply = <&pm8994_l28>;
+				//vddio-supply = <&pm8994_l12>;
+				//vcca-supply = <&pm8994_l28>;
 			};
 
 			hdmi-tx@9a0000 {
 				status = "okay";
 
-				core-vdda-supply = <&pm8994_l12>;
-				core-vcc-supply = <&pm8994_s4>;
+				//core-vdda-supply = <&pm8994_l12>;
+				//core-vcc-supply = <&pm8994_s4>;
 			};
 		};
 
