--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -381,102 +381,113 @@
 			status = "okay";
 		};
 
-		mdp: mdp@900000 {
-			compatible = "qcom,mdp5";
-			reg = <0x900000 0x90000>,
+		mdss: mdss@900000 {
+			compatible = "qcom,mdss";
+
+			reg = <0x900000 0x1000>,
 			      <0x9b0000 0x1040>,
 			      <0x9b8000 0x1040>;
-			reg-names = "mdp_phys",
+			reg-names = "mdss_phys",
 				    "vbif_phys",
 				    "vbif_nrt_phys";
 
-			interrupt-parent = <&intc>;
+			power-domains = <&mmcc MDSS_GDSC>;
 			interrupts = <0 83 0>;
 
 			interrupt-controller;
 			#interrupt-cells = <1>;
 
-			power-domains = <&mmcc MDSS_GDSC>;
+			clocks = <&mmcc MDSS_AHB_CLK>;
+			clock-names = "iface_clk";
 
-			connectors = <&hdmi>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges;
 
-			clocks = <&mmcc MDSS_AHB_CLK>,
-				 <&mmcc MMSS_MMAGIC_AHB_CLK>,
-				 <&mmcc MDSS_AXI_CLK>,
-				 <&mmcc MDP_CLK_SRC>,
-				 <&mmcc MDSS_MDP_CLK>,
-				 <&mmcc SMMU_MDP_AXI_CLK>,
-				 <&mmcc MDSS_VSYNC_CLK>,
-				 <&mmcc MMAGIC_MDSS_AXI_CLK>,
-				 <&rpmcc RPM_MMAXI_CLK>;
-			clock-names = "iface_clk",
-				      "mmagic_iface_clk",
-				      "bus_clk",
-				      "core_clk_src",
-				      "core_clk",
-				      "iommu_clk",
-				      "vsync_clk",
-				      "mmagic_mdss_bus_clk",
-				      "rpm_mmaxi_clk";
-			iommus = <&mdp_smmu 0>;
-		};
+			mdp: mdp@901000 {
+				compatible = "qcom,mdp5";
+				reg = <0x901000 0x90000>;
+				reg-names = "mdp_phys";
 
-		hdmi: hdmi-tx@9a0000 {
-			compatible = "qcom,hdmi-tx-8996";
-			reg =	<0x009a0000 0x50c>,
-				<0x00070000 0x6158>,
-				<0x009e0000 0xfff>;
-			reg-names = "core_physical",
-				    "qfprom_physical",
-				    "hdcp_physical";
+				interrupt-parent = <&mdss>;
+				interrupts = <0 0>;
 
-			interrupt-parent = <&mdp>;
-			interrupts = <8 0>;
+				clocks = <&mmcc MDSS_AHB_CLK>,
+					 <&mmcc MMSS_MMAGIC_AHB_CLK>,
+					 <&mmcc MDSS_AXI_CLK>,
+					 <&mmcc MDP_CLK_SRC>,
+					 <&mmcc MDSS_MDP_CLK>,
+					 <&mmcc SMMU_MDP_AXI_CLK>,
+					 <&mmcc MDSS_VSYNC_CLK>,
+					 <&mmcc MMAGIC_MDSS_AXI_CLK>,
+					 <&rpmcc RPM_MMAXI_CLK>;
+				clock-names = "iface_clk",
+					      "mmagic_iface_clk",
+					      "bus_clk",
+					      "core_clk_src",
+					      "core_clk",
+					      "iommu_clk",
+					      "vsync_clk",
+					      "mmagic_mdss_bus_clk",
+					      "rpm_mmaxi_clk";
+				iommus = <&mdp_smmu 0>;
+			};
 
-			power-domains = <&mmcc MDSS_GDSC>;
-			clocks = <&mmcc MDSS_MDP_CLK>,
-				 <&mmcc MDSS_AHB_CLK>,
-				 <&mmcc MDSS_HDMI_CLK>,
-				 <&mmcc MDSS_HDMI_AHB_CLK>,
-				 <&mmcc MDSS_EXTPCLK_CLK>;
-			clock-names =
-				"mdp_core_clk",
-				"iface_clk",
-				"core_clk",
-				"alt_iface_clk",
-				"extp_clk";
+			hdmi: hdmi-tx@9a0000 {
+				compatible = "qcom,hdmi-tx-8996";
+				reg =	<0x009a0000 0x50c>,
+					<0x00070000 0x6158>,
+					<0x009e0000 0xfff>;
+				reg-names = "core_physical",
+					    "qfprom_physical",
+					    "hdcp_physical";
 
-			pinctrl-names = "default", "sleep";
-			pinctrl-0 = <&hdmi_hpd_active &hdmi_ddc_active>;
-			pinctrl-1 = <&hdmi_hpd_suspend &hdmi_ddc_suspend>;
+				interrupt-parent = <&mdss>;
+				interrupts = <8 0>;
 
-			phys = <&hdmi_phy>;
-			phy-names = "hdmi_phy";
-		};
+				power-domains = <&mmcc MDSS_GDSC>;
+				clocks = <&mmcc MDSS_MDP_CLK>,
+					 <&mmcc MDSS_AHB_CLK>,
+					 <&mmcc MDSS_HDMI_CLK>,
+					 <&mmcc MDSS_HDMI_AHB_CLK>,
+					 <&mmcc MDSS_EXTPCLK_CLK>;
+				clock-names =
+					"mdp_core_clk",
+					"iface_clk",
+					"core_clk",
+					"alt_iface_clk",
+					"extp_clk";
 
-		hdmi_phy: hdmi-phy@9a0600 {
-			compatible = "qcom,hdmi-phy-8996";
-			reg = <0x9a0600 0x1c4>,
-			      <0x9a0a00 0x124>,
-			      <0x9a0c00 0x124>,
-			      <0x9a0e00 0x124>,
-			      <0x9a1000 0x124>,
-			      <0x9a1200 0x0c8>;
-			reg-names = "hdmi_pll",
-				    "hdmi_tx_l0",
-				    "hdmi_tx_l1",
-				    "hdmi_tx_l2",
-				    "hdmi_tx_l3",
-				    "hdmi_phy";
+				pinctrl-names = "default", "sleep";
+				pinctrl-0 = <&hdmi_hpd_active &hdmi_ddc_active>;
+				pinctrl-1 = <&hdmi_hpd_suspend &hdmi_ddc_suspend>;
 
-			power-domains = <&mmcc MDSS_GDSC>;
+				phys = <&hdmi_phy>;
+				phy-names = "hdmi_phy";
+			};
 
-			clocks = <&mmcc MDSS_AHB_CLK>,
-				 <&mmcc MMSS_MMAGIC_AHB_CLK>,
-				 <&gcc GCC_HDMI_CLKREF_CLK>;
-			clock-names = "iface_clk",
-				      "mmagic_iface_clk",
-				      "ref_clk";
+			hdmi_phy: hdmi-phy@9a0600 {
+				compatible = "qcom,hdmi-phy-8996";
+				reg = <0x9a0600 0x1c4>,
+				      <0x9a0a00 0x124>,
+				      <0x9a0c00 0x124>,
+				      <0x9a0e00 0x124>,
+				      <0x9a1000 0x124>,
+				      <0x9a1200 0x0c8>;
+				reg-names = "hdmi_pll",
+					    "hdmi_tx_l0",
+					    "hdmi_tx_l1",
+					    "hdmi_tx_l2",
+					    "hdmi_tx_l3",
+					    "hdmi_phy";
+
+				clocks = <&mmcc MDSS_AHB_CLK>,
+					 <&mmcc MMSS_MMAGIC_AHB_CLK>,
+					 <&gcc GCC_HDMI_CLKREF_CLK>;
+				clock-names = "iface_clk",
+					      "mmagic_iface_clk",
+					      "ref_clk";
+			};
 		};
 
 		ufsphy1: ufsphy@627000 {
