--- a/arch/arm64/boot/dts/qcom/msm8916-mdss.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916-mdss.dtsi
@@ -45,74 +45,86 @@
 		};
 	};
 
-	mdp: mdp@1a00000 {
-		compatible = "qcom,mdp5";
-		reg = <0x1a00000 0x90000>,
+	mdss: mdss@1a00000 {
+		compatible = "qcom,mdss";
+		reg = <0x1a00000 0x1000>,
 		      <0x1ac8000 0x3000>;
-		reg-names = "mdp_phys", "vbif_phys";
+		reg-names = "mdss_phys", "vbif_phys";
+	
+		power-domains = <&gcc MDSS_GDSC>;
+
+		clocks = <&gcc GCC_MDSS_AHB_CLK>;
+		clock-names = "iface_clk";
+
 		interrupts = <0 72 0>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
 
-		power-domains = <&gcc MDSS_GDSC>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges;
 
-		connectors = <&dsi0>;
-		gpus = <&gpu>;
+		mdp: mdp@1a01000 {
+			compatible = "qcom,mdp5";
+			reg = <0x1a01000 0x90000>;
+			reg-names = "mdp_phys";
 
-		qcom,msm-bus,name = "mdss_mdp";
-		qcom,msm-bus,num-cases = <3>;
-		qcom,msm-bus,num-paths = <1>;
-		qcom,msm-bus,vectors-KBps =
-			<22 512 0 0>,
-			<22 512 0 6400000>,
-			<22 512 0 6400000>;
+			interrupt-parent = <&mdss>;
+			interrupts = <0 0>;
 
-		clocks = <&gcc GCC_MDSS_AHB_CLK>,
-			 <&gcc GCC_MDSS_AXI_CLK>,
-			 <&gcc MDP_CLK_SRC>,
-			 <&gcc GCC_MDSS_MDP_CLK>,
-			 <&gcc GCC_MDSS_VSYNC_CLK>;
-		clock-names = "iface_clk", "bus_clk", "core_clk_src",
-			      "core_clk", "vsync_clk";
-	};
+			qcom,msm-bus,name = "mdss_mdp";
+			qcom,msm-bus,num-cases = <3>;
+			qcom,msm-bus,num-paths = <1>;
+			qcom,msm-bus,vectors-KBps =
+				<22 512 0 0>,
+				<22 512 0 6400000>,
+				<22 512 0 6400000>;
 
-	dsi0: dsi@1a98000 {
-		compatible = "qcom,mdss-dsi-ctrl";
-		qcom,dsi-host-index = <0>;
-		reg = <0x1a98000 0x25c>;
-		reg-names = "dsi_ctrl";
+			clocks = <&gcc GCC_MDSS_AHB_CLK>,
+				 <&gcc GCC_MDSS_AXI_CLK>,
+				 <&gcc MDP_CLK_SRC>,
+				 <&gcc GCC_MDSS_MDP_CLK>,
+				 <&gcc GCC_MDSS_VSYNC_CLK>;
+			clock-names = "iface_clk", "bus_clk", "core_clk_src",
+				      "core_clk", "vsync_clk";
+		};
 
-		interrupt-parent = <&mdp>;
-		interrupts = <4 0>;
+		dsi0: dsi@1a98000 {
+			compatible = "qcom,mdss-dsi-ctrl";
+			qcom,dsi-host-index = <0>;
+			reg = <0x1a98000 0x25c>;
+			reg-names = "dsi_ctrl";
 
-		clocks = <&gcc GCC_MDSS_MDP_CLK>,
-                         <&gcc GCC_MDSS_AHB_CLK>,
-                         <&gcc GCC_MDSS_AXI_CLK>,
-                         <&gcc GCC_MDSS_AHB_CLK>,
-                         <&gcc GCC_MDSS_BYTE0_CLK>,
-                         <&gcc GCC_MDSS_PCLK0_CLK>,
-                         <&gcc GCC_MDSS_ESC0_CLK>,
-                         <&gcc BYTE0_CLK_SRC>,
-                         <&gcc PCLK0_CLK_SRC>;
-                clock-names = "mdp_core_clk", "iface_clk", "bus_clk",
-			      "core_mmss_clk", "byte_clk", "pixel_clk",
-			      "core_clk", "byte_clk_src", "pixel_clk_src";
-		qcom,dsi-phy = <&dsi_phy0>;
-	};
+			interrupt-parent = <&mdss>;
+			interrupts = <4 0>;
 
-	dsi_phy0: dsi-phy@1a98300 {
-		compatible = "qcom,dsi-phy-28nm-lp";
-		qcom,dsi-phy-index = <0>;
+			clocks = <&gcc GCC_MDSS_MDP_CLK>,
+                	         <&gcc GCC_MDSS_AHB_CLK>,
+                	         <&gcc GCC_MDSS_AXI_CLK>,
+                	         <&gcc GCC_MDSS_AHB_CLK>,
+                	         <&gcc GCC_MDSS_BYTE0_CLK>,
+                        	 <&gcc GCC_MDSS_PCLK0_CLK>,
+                        	 <&gcc GCC_MDSS_ESC0_CLK>,
+                        	 <&gcc BYTE0_CLK_SRC>,
+                        	 <&gcc PCLK0_CLK_SRC>;
+			clock-names = "mdp_core_clk", "iface_clk", "bus_clk",
+			 	     "core_mmss_clk", "byte_clk", "pixel_clk",
+			 	     "core_clk", "byte_clk_src", "pixel_clk_src";
+			qcom,dsi-phy = <&dsi_phy0>;
+		};
 
-		power-domains = <&gcc MDSS_GDSC>;
+		dsi_phy0: dsi-phy@1a98300 {
+			compatible = "qcom,dsi-phy-28nm-lp";
+			qcom,dsi-phy-index = <0>;
 
-		reg-names = "dsi_pll", "dsi_phy", "dsi_phy_regulator";
-		reg = <0x1a98300 0xd4>,
-		      <0x1a98500 0x280>,
-		      <0x1a98780 0x30>;
+			reg-names = "dsi_pll", "dsi_phy", "dsi_phy_regulator";
+			reg = <0x1a98300 0xd4>,
+		 	     <0x1a98500 0x280>,
+		 	     <0x1a98780 0x30>;
 
-		clocks = <&gcc GCC_MDSS_AHB_CLK>;
-		clock-names = "iface_clk";
+			clocks = <&gcc GCC_MDSS_AHB_CLK>;
+			clock-names = "iface_clk";
+		};
 	};
 };
